[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["Osama-Yousef <osamawalidyousef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.6"
pandas = "^1.1.1"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
